stream auth in progress

--- a/web/index.html
+++ b/web/index.html
@@ -41,5 +41,26 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+    var firebaseConfig = {
+    apiKey: "AIzaSyAq-boRCas9lx0ZunRBPadQu203lyqOqp8",
+    authDomain: "eti-crm.firebaseapp.com",
+    projectId: "eti-crm",
+    storageBucket: "eti-crm.appspot.com",
+    messagingSenderId: "499440596124",
+    appId: "1:499440596124:web:fbb16539ef1a4b9c762959"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
